--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "assert": "^1.4.1",
     "body-parser": "~1.15.1",
     "bootstrap": "^3.3.7",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.13.4",
+    "font-awesome": "^4.6.3",
     "jade": "~1.11.0",
     "jquery": "^3.1.1",
     "mongodb": "^2.2.10",
